--- a/src/index.css
+++ b/src/index.css
@@ -12,12 +12,15 @@
     flex-direction: column;
     align-items: center;
     gap: 2rem;
+    width: 90vw;
 }
 
 form {
     display: flex;
     gap: 1rem;
-    width: 90vw;
+    justify-content: center;
+    width: 90%;
+    margin: 0 auto;
 }
 
 button {
@@ -32,11 +35,13 @@ form input {
 }
 
 form input[type="text"] {
-    width: 58vw;
+    width: 50%;
 }
 
 form button {
-    background: greenyellow;
+    background: #33bb0a;
+    color: #fff;
+    border-radius: 0.3rem;
     box-shadow: 3px 2px 3px rgba(0, 0, 0, 0.2);
 }
 
@@ -49,12 +54,25 @@ ul {
 }
 
 ul li {
-    width: 85%;
+    width: 70%;
     margin: 0 auto;
     display: flex;
     justify-content: space-around;
+    align-items: center;
+    background: #4c9c1d;
+    color: #fff;
     gap: 2rem;
-    padding: 1rem 1.2rem;
-    box-shadow: 3px 2px 6px rgba(0, 0, 0, 0.2);
+    padding: 0.8rem;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+}
 
+ul li.marked {
+    background: #4c9c1d;
+    opacity: 0.5;
+    color: #d1d1d1;
+}
+
+li h4 {
+    width: 40%;
+    word-wrap: break-word;
 }
